--- a/contact.html
+++ b/contact.html
@@ -235,7 +235,7 @@
                     <p class="mb-md-0">&copy; <a class="text-primary" href="#">Your Site Name</a>. All Rights Reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <p class="mb-0">Designed by <a class="text-primary" href="https://freewebsitecode.com">Free Website Code</a></p>
+                    <p class="mb-0">Designed by <a class="text-primary" href="https://www.instagram.com/webdev.laksh/">webdev.laksh</a></p>
                 </div>
             </div>
         </div>
